--- a/site-assets/css/styles.css
+++ b/site-assets/css/styles.css
@@ -1,5 +1,6 @@
 /*=============== GOOGLE FONTS ===============*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+
 /*=============== VARIABLES CSS ===============*/
 :root {
   /*========== Colors ==========*/
@@ -31,6 +32,7 @@
   --small-font-size: .813rem;
   --smaller-font-size: .75rem;
 }
+
 @media screen and (min-width: 968px) {
   :root {
     --h2-font-size: 1.5rem;
@@ -57,7 +59,9 @@ body {
   /* For animation dark mode */
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   color: var(--title-color);
   font-weight: 600;
 }
@@ -85,6 +89,7 @@ img {
   cursor: pointer;
   transition: 0.3s;
 }
+
 .change-theme:hover {
   color: var(--first-color);
 }
@@ -104,6 +109,7 @@ body.dark-theme {
 .dark-theme .button__gray {
   background-color: var(--container-color);
 }
+
 .dark-theme .button__gray:hover {
   background-color: hsl(var(--hue), 24%, 16%);
 }
@@ -141,30 +147,35 @@ body.dark-theme {
   position: relative;
   padding-top: 3.5rem;
 }
+
 .profile__container {
   row-gap: 2rem;
 }
+
 .profile__data {
   display: grid;
   text-align: center;
 }
+
 .profile__perfil {
   width: 100px;
   height: 100px;
-  background: linear-gradient(180deg, hsla(var(--hue), var(--sat), var(--lig), 1) 0%, hsla(var(--hue), var(--sat), var(--lig), 0.2) 100%);
+  background: linear-gradient(180deg, hsla(0, 90%, 61%, 1) 0%, hsla(0, 90%, 61%, 0.2) 100%);
   border-radius: 50%;
   overflow: hidden;
   display: flex;
   align-items: flex-end;
   justify-content: center;
 }
+
 .profile__perfil img {
   width: 100px;
   object-fit: contain;
   object-position: center;
 }
+
 .profile__border {
-  border: 3.5px solid var(--first-color);
+  border: 3.5px solid hsl(0, 90%, 61%);
   justify-self: center;
   width: 115px;
   height: 115px;
@@ -173,52 +184,65 @@ body.dark-theme {
   place-items: center;
   margin-bottom: 0.75rem;
 }
+
 .profile__name {
   font-size: var(--h2-font-size);
 }
+
 .profile__profession {
   font-size: var(--smaller-font-size);
   font-weight: 500;
   color: var(--text-color);
   margin-bottom: 1rem;
 }
+
 .profile__social {
   display: flex;
   justify-content: center;
   column-gap: 0.75rem;
 }
+
 .profile__social-link {
   font-size: 1.25rem;
   color: var(--title-color);
   transition: 0.3s;
 }
+
 .profile__social-link:hover {
   color: var(--first-color);
 }
+
 .profile__info {
   grid-template-columns: repeat(3, max-content);
   justify-content: center;
   column-gap: 2.5rem;
 }
+
 .profile__info-group {
   text-align: center;
 }
+
 .profile__info-number {
   font-size: var(--normal-font-size);
   margin-bottom: 0.25rem;
 }
+
 .profile__info-description {
   font-size: var(--smaller-font-size);
   font-weight: 500;
 }
-.profile__buttons, .profile__buttons-small {
+
+.profile__buttons,
+.profile__buttons-small {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .profile__buttons {
   column-gap: 1rem;
 }
+
 .profile__buttons-small {
   column-gap: 0.25rem;
 }
@@ -235,20 +259,25 @@ body.dark-theme {
   transition: 0.3s;
   box-shadow: 0 8px 24px hsla(var(--hue), var(--sat), var(--lig), 0.25);
 }
+
 .button i {
   font-size: 1.25rem;
 }
+
 .button:hover {
   background-color: var(--first-color-alt);
 }
+
 .button__small {
   padding: 0.75rem;
   box-shadow: none;
 }
+
 .button__gray {
   background-color: var(--text-color-lighten);
   color: var(--title-color);
 }
+
 .button__gray:hover {
   background-color: var(--text-color-light);
 }
@@ -263,6 +292,7 @@ body.dark-theme {
   justify-content: space-between;
   column-gap: 0.5rem;
 }
+
 .filters__button {
   width: 100%;
   border: none;
@@ -277,6 +307,7 @@ body.dark-theme {
   background-color: transparent;
   transition: 0.3s;
 }
+
 .filters__button:hover {
   background-color: var(--body-color);
 }
@@ -287,13 +318,16 @@ body.dark-theme {
   border-radius: 1rem;
   overflow: hidden;
 }
+
 .projects__card img {
   width: 100%;
   height: 100%;
 }
+
 .projects__card:hover .projects__modal {
   bottom: 0;
 }
+
 .projects__modal {
   position: absolute;
   width: 100%;
@@ -306,16 +340,21 @@ body.dark-theme {
   padding: 1.5rem 1.25rem;
   transition: 0.3s;
 }
-.projects__subtitle, .projects__title {
+
+.projects__subtitle,
+.projects__title {
   color: #fff;
 }
+
 .projects__subtitle {
   font-size: var(--smaller-font-size);
 }
+
 .projects__title {
   font-size: var(--h3-font-size);
   margin-bottom: 0.75rem;
 }
+
 .projects__button {
   padding: 0.5rem;
 }
@@ -324,34 +363,41 @@ body.dark-theme {
 .skills__content {
   row-gap: 3.5rem;
 }
+
 .skills__title {
   font-size: var(--h3-font-size);
   text-align: center;
   margin-bottom: 1.5rem;
 }
+
 .skills__box {
   display: flex;
   justify-content: center;
   column-gap: 3rem;
 }
+
 .skills__group {
   display: grid;
   align-content: flex-start;
   row-gap: 1rem;
 }
+
 .skills__data {
   display: flex;
   column-gap: 0.5rem;
 }
+
 .skills__data i {
   font-size: 1rem;
   color: var(--first-color);
 }
+
 .skills__name {
   font-size: var(--normal-font-size);
   font-weight: 500;
   line-height: 18px;
 }
+
 .skills__level {
   font-size: var(--smaller-font-size);
 }
@@ -385,10 +431,12 @@ body.dark-theme {
   border-radius: 0.5rem;
   background-color: hsl(var(--hue), 8%, 66%);
 }
+
 ::-webkit-scrollbar-thumb {
   background-color: hsl(var(--hue), 8%, 54%);
   border-radius: 0.5rem;
 }
+
 ::-webkit-scrollbar-thumb:hover {
   background-color: hsl(var(--hue), 8%, 44%);
 }
@@ -404,6 +452,7 @@ body.dark-theme {
   .profile__info {
     column-gap: 1.5rem;
   }
+
   .profile__buttons {
     flex-direction: column;
     row-gap: 1rem;
@@ -413,6 +462,7 @@ body.dark-theme {
     column-gap: 1rem;
   }
 }
+
 /* For medium devices */
 @media screen and (min-width: 576px) {
   .projects__content {
@@ -425,9 +475,11 @@ body.dark-theme {
     margin: 3rem auto;
   }
 }
+
 @media screen and (min-width: 776px) {
+
   .projects__content,
-.skills__content {
+  .skills__content {
     grid-template-columns: repeat(2, 332px);
   }
 
@@ -436,6 +488,7 @@ body.dark-theme {
     column-gap: 3rem;
   }
 }
+
 /* For large devices */
 @media screen and (min-width: 992px) {
   .container {
@@ -451,27 +504,34 @@ body.dark-theme {
   .profile {
     padding-top: 4rem;
   }
+
   .profile__border {
     width: 135px;
     height: 135px;
     margin-bottom: 1rem;
   }
+
   .profile__perfil {
     width: 120px;
     height: 120px;
   }
+
   .profile__perfil img {
     width: 90px;
   }
+
   .profile__profession {
     margin-bottom: 1.5rem;
   }
+
   .profile__info {
     column-gap: 3rem;
   }
+
   .profile__info-description {
     font-size: var(--small-font-size);
   }
+
   .profile__buttons {
     column-gap: 2rem;
   }
@@ -479,6 +539,7 @@ body.dark-theme {
   .projects__content {
     gap: 2rem 3rem;
   }
+
   .projects__modal {
     padding: 1.5rem;
   }
